# editor-scripts

./: .aeaready.css  .gitignore  CLAUDE.md  README.md  aea_box_clean_folders  aea_box_recover_files  aea_init_issue.sh  aea_init_repo.sh  aeaclean  aeaget_restricted  aeagit  aeagit-create.py  aeamerge  aeaopen  aeaready  aeareq  aearevision  aeascripts  directory-size.ps1  docker-info.sh  icpsrsearch  install.sh  jira_approval_manager.py  jira_get_doi.py  jira_get_info.py  jira_purge_query.py  pyproject.toml  requirements.txt  setsecret-icpsr.sh  setsecret-stata.sh  setup-rsync.sh  stata.lic  stata16  stata17  stata17-apptainer  stata17sh  stata18  stata18now  stata18nowsh  stata18sh  (+8 more)
.devcontainer/: Dockerfile  devcontainer.json  init.sh
.github/workflows/: docker-build.yml
aea_editor_scripts/: aeagit.py  aeagit_create.py  box_clean_folders.py  box_recover_files.py  jira_approval_manager.py  jira_purge_query.py  jira_status_manager.py  parse_tags.py  zenodo_metadata_editor.py
aea_editor_scripts.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docker/: Dockerfile  build.sh  convert.js
docs/superpowers/plans/: 2026-06-11-box-clean-folders-jira-box-id-sync.md
docs/superpowers/specs/: 2026-06-11-box-clean-folders-jira-box-id-sync-design.md
